--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -315,7 +315,7 @@ footer {
     }
 
     .search-container button {
-        margin-left: 0;
+        margin-left: 3px;
         margin-top: 8px;
         width: 50%;
     }
