--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -458,7 +458,7 @@ footer {
                             <div class="poster-content">
                                 <h3>{{ movie.title }}</h3>
                                 <p>{{ movie.release_date }}</p>
-                                <p>{{ movie.overview }}</p>
+                                <p>{{ movie.overview|truncatewords:20 }}</p>
                             </div>
                         </div>
                     </a>
