--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -354,8 +354,16 @@ footer {
         font-size: 1.5rem;
     }
 
+    .search-container input[type=text] {
+        padding: 8px;
+        width: calc(100% - 50px); /* Adjust the width so it fits next to the button */
+    }
+
     .search-container button {
         padding: 8px;
+        margin-left: 0;
+        margin-top: 0;
+        width: 50px;
     }
 
     /* Movie row adjustments */
