--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -395,6 +395,7 @@
 </head>
 <body>
     <header>
+        <button class="openbtn" onclick="openNav()">☰</button>
         <div class="logo">Ease-E-Movies</div>
         <nav class="navbar">
             <a href="{% url 'home' %}">Home</a>
