--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -417,7 +417,7 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="{% url 'home' %}">Home</a>
-        <a href="{% url 'action_series' %}">Action</a>
+        <a href="{% url 'action_movies' %}">Action</a>
         <a href="{% url 'animation_movies' %}">Animation</a>
         <a href="{% url 'comedy_movies' %}">Comedy</a>
         <a href="{% url 'drama_movies' %}">Drama</a>
