--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -282,13 +282,13 @@
          }
      
          .search-container form {
-             display: hidden;
              flex-direction: row;
              justify-content: space-between;
              width: 100%;
          }
      
          .search-container input[type=text] {
+             display: none;
              width: 100%;
              padding-right: 30px;
              max-width: none; /* Remove max-width to allow full-width on small screens */
