--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -289,6 +289,7 @@
      
          .search-container input[type=text] {
              display: none;
+             justify-content: space-between;
              width: 100%;
              padding-right: 30px;
              max-width: none; /* Remove max-width to allow full-width on small screens */
