--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -290,6 +290,7 @@
          .search-container input[type=text] {
              display: none;
              justify-content: space-between;
+             padding-left: 40px;
              width: 100%;
              padding-right: 30px;
              max-width: none; /* Remove max-width to allow full-width on small screens */
