--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -309,15 +309,17 @@ footer {
     }
 
     .search-container input[type=text] {
+        display: none;
+        justify-content: space-between;
         width: 100%;
         padding-right: 30px;
         max-width: none; /* Remove max-width to allow full-width on small screens */
     }
 
     .search-container button {
-        margin-left: 8px;
+        margin-left: 150px;
         margin-top: 5px;
-        width: 50%;
+        width: 30%;
     }
 
     /* Movie row adjustments */
@@ -355,6 +357,7 @@ footer {
     }
 
     .search-container input[type=text] {
+        display: none;
         padding: 8px;
         width: calc(100% - 50px); /* Adjust the width so it fits next to the button */
     }
