--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -336,6 +336,7 @@
          }
      
          .search-container input[type=text] {
+             display: none;
              padding: 8px;
              width: calc(100% - 50px); /* Adjust the width so it fits next to the button */
          }
