--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -343,7 +343,7 @@
      
          .search-container button {
              padding: 8px;
-             margin-left: 0;
+             margin-left: 150px;
              margin-top: 0;
              width: 50px;
          }
