--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -364,7 +364,7 @@ footer {
 
     .search-container button {
         padding: 8px;
-        margin-left: 0;
+        margin-left: 200px;
         margin-top: 0;
         width: 50px;
     }
